# ThesisInnovationEvaluation

./: .gitignore  README.md  pyproject.toml
config/: README.md  rules.txt  strategy.txt
data/: README.md
data/sample/: README.md
docs/: AGENTS.md  DIRECTORY_STRUCTURE_REPORT.md  MIGRATION_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  SMART_REFERENCE_EXTRACTOR_STRUCTURE.md  UNIVERSAL_COMPARISON_IMPROVEMENT.md
docs/reports/: 51177_THESIS_ANALYSIS_REPORT.md  51177_b6ac1c475108811bd4a31a6ebcd397df_toc.md  64K_MODEL_20MB_PAPER_SUPPORT_REPORT.md  ACADEMIC_TITLE_COMPLIANCE_REPORT.md  AI_CONCURRENT_OPTIMIZATION_REPORT.md  AI_SECTION_ANALYSIS_IMPLEMENTATION_REPORT.md  AI_TOC_EXTRACTOR_OPTIMIZATION_REPORT.md  API_FAILURE_INVESTIGATION_REPORT.md  CACHED_EVALUATION_EXPLANATION.md  CACHED_EVALUATION_IMPLEMENTATION_REPORT.md  CACHED_MARKDOWN_EXTRACTION_REPORT.md  CACHE_IMPLEMENTATION_REPORT.md  CLI_COMMAND_ERROR_ANALYSIS.md  CLI_ERROR_SOLUTION_GUIDE.md  COMPLETE_SUCCESS_REPORT.md  COMPREHENSIVE_EXTRACTION_REPORT.md  CONCLUSION_ANALYSIS_FIX_REPORT.md  CONCURRENT_OPTIMIZATION_COMPLETION_REPORT.md  ERROR_LOGGING_IMPLEMENTATION_REPORT.md  EXPERT_STRATEGY_ONLY_IMPLEMENTATION_REPORT.md  FIELD_EXTRACTION_FIX_COMPLETION_REPORT.md  FIELD_OPTIMIZATION_REPORT.md  FILE_DIFFERENCE_ANALYSIS_REPORT.md  HEART_IMAGING_ANALYSIS_REPORT.md  INTEGRATION_SUMMARY.md  INTELLIGENT_EXTRACTOR_OPTIMIZATION_REPORT.md  LITERATURE_ANALYSIS_CONSISTENCY_FIX.md  LITERATURE_REVIEW_ENHANCEMENT_REPORT.md  LITERATURE_REVIEW_EXTRACTION_IMPLEMENTATION.md  MIGRATION_GUIDE.md  NEW_PROXY_SERVER_EVALUATION_REPORT.md  NO_NONE_RETURN_FIX_REPORT.md  PRO_CACHE_LOADING_ANALYSIS_REPORT.md  PRO_CACHE_PRIORITY_IMPLEMENTATION_REPORT.md  PRO_EXTRACTOR_COMPLETION_REPORT.md  QUALITY_DEGRADATION_IMPLEMENTATION_REPORT.md  README.md  README_TOC_EXTRACTOR.md  REFACTORING_REPORT.md  REFERENCES_FORMAT_OPTIMIZATION_REPORT.md  (+6 more)
logs/: README.md
src/: extract_sections_with_ai.py
src/thesis_inno_eval/: __about__.py  __init__.py  ai_client.py  ai_toc_extractor.py  cached_evaluator.py  cli.py  cnki_client_pool.py  cnki_query_generator.py  config_manager.py  extract_sections_with_ai.py  literature_review_analyzer.py  logging_config.py  pandas_remove_duplicates.py  paper_section_processor.py  report_generator.py  smart_reference_extractor.py  smart_reference_extractor_clean.py  smart_reference_extractor_old.py  test_ai_client.py  test_config_system.py
tests/: __init__.py  test_ai_client.py  test_config_system.py
tests/integration/: __init__.py  conftest.py  test_50193.py  test_50286_extraction.py  test_51177_extraction.py  test_51177_simple.py  test_abstract_keywords_fix.py  test_academic_compliance.py  test_ai_client.py  test_ai_conclusion_analysis.py  test_ai_cover_extraction.py  test_ai_references.py  test_ai_response.py  test_ai_section_analysis.py  test_api_patterns.py  test_api_stability.py  test_batch_extraction.py  test_boundary_fix.py  test_boundary_integration.py  test_cache_functionality.py  test_cached_markdown_pro_strategy.py  test_cached_section_boundaries.py  test_chain_of_thought_analysis.py  test_chinese_only.py  test_cli_error_handling.py  test_complete_33_fields.py  test_complete_flow.py  test_complete_json.py  test_complete_stability.py  test_computer_minority_lang.py  test_computer_tech.py  test_computer_tech_test1.py  test_computer_tech_test2.py  test_conclusion_extraction.py  test_concurrent_extraction.py  test_concurrent_final.py  test_concurrent_simple.py  test_config_migration.py  test_connection_pool_fix.py  test_control_char_json.py  (+75 more)
tools/: README.md  cnki_manual_search.py  run_md_cnki_search_cn.py
tools/analysis/: README.md  academic_standards_analysis.py  analyze_51177_chapters.py  analyze_51177_structure.py  analyze_51177_thesis_structure.py  analyze_api_logs.py  analyze_doc_beginning.py  analyze_document_xml.py  analyze_heart_imaging_structure.py  analyze_hidden_toc.py  analyze_markdown_usage.py  analyze_marxism_structure.py  analyze_pro_metadata.py  analyze_ref_length.py  analyze_references_format.py  analyze_single_doc.py  analyze_toc_fields.py  analyze_word_structure.py  section_boundary_report.py
tools/legacy/: README.md  demo_20mb_processing.py  demo_extract.py  demo_toc_extractor.py  latest_test_report.py  real_thesis_examples.py
tools/maintenance/: README.md  cleanup_markdown.py  code_improvements.py  comprehensive_thesis_extractor.py  debug_analyze_authors.py  debug_bookmarks.py  debug_chinese_content.py  debug_computer_toc.py  debug_corresponding.py  debug_detailed_refs.py  debug_file_content.py  debug_metadata.py  debug_metadata_analysis.py  debug_module_location.py  debug_prompt.py  debug_real_analyzer.py  debug_references.py  debug_supervisor_regex.py  debug_toc_boundary.py  debug_toc_content.py  debug_word_content.py  enhance_extraction.py  enhanced_chapter_detector.py  enhanced_extractor.py  enhanced_thesis_extractor.py  extract_51177_structured.py  extract_bi_sb_se.py  extract_complete_toc.py  find_real_toc.py  fix_enhanced_extraction.py  fix_references.py  fix_references_extraction.py  heading_based_toc_extractor.py  heart_imaging_thesis_extractor.py  large_document_extractor.py  large_document_support_analyzer.py  migrate_structure.py  organize_structure.py  updated_toc_extractor.py
tools/verification/: README.md  (+14 more)
(+2 files in other folders)
